Integrate doc type in file number duplicate checks (#2644)
RISDEV-6823